# WorksApplication2014ProgrammingExamination

./: .gitignore  CMakeLists.txt  README
.solutions/: USACO.1.html  USACO_Chapter_1.html  USACO_Chapter_3.html  USACO_Chapter_4.html  USACO_Chapter_5.html  USACO_Chapter_6.html  USACO_Contest.html  USACO_Training.html  wget_cmd
.solutions/Translate:USACO/: Big_Number.html  Binary_Numbers.html  Complete_Search.html  Computational_Geometry.html  ConvexHulls.html  Data_Structures.html  Dynamic_Programming.html  EulerianTour.html  Flood_Fill_Algorithms.html  Graph_Theory.html  Greedy_Algorithm.html  HeuristicSearch.html  Introduction.html  Knapsack_Problems.html  Minimal_Spanning_Trees.html  More_Search_Techniques.html  NetworkFlow.html  Optimization.html  Shortest_Paths.html  Winning_Solutions.html  agrinet.html  ariprog.html  bales.html  barn1.html  beads.html  betsy.html  bigbrn.html  butter.html  buylow.html  calfflac.html  camelot.html  castle.html  charrec.html  checker.html  clocks.html  comehome.html  concom.html  contact.html  cowcycle.html  cowtour.html  (+78 more)
.solutions/USACO/: Chapter1.html  Chapter2.html  Chapter3.html  Chapter4.html  Chapter5.html  Chapter6.html  Csort.html  Newbarn.html  Power_Hungry_Cows(power).html  Power_hungry_cows_analysis.html  Uing.html  acng.html  aggr.html  agrinet.html  alake.html  alake_analysis.html  allow.html  ariprog.html  badgras.html  badgras_analysis.html  badhair.html  badhair_analysis.html  bales.html  balloc.html  (+234 more)
src/: orienteering.cpp
test/: CMakeLists.txt  gen_distance_matrix.py  test_input.cc  test_search.cc  test_tsp.cc
(+325 files in other folders)
